--- a/.github/workflows/Deploy-to-Azure_Functions.yml
+++ b/.github/workflows/Deploy-to-Azure_Functions.yml
@@ -2,6 +2,11 @@ name: Deploy API to Azure Functions
 
 on:
   workflow_dispatch:
+    inputs:
+      functionName:
+        description: 'Name of the Azure Function to deploy'
+        required: true
+        default: 'my-function-app'
 
 permissions:
   id-token: write
@@ -10,7 +15,53 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      APP_PATH: './src/http_functions'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          cd ${{ env.APP_PATH }}
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt --target=".python_packages/lib/site-packages"
+
+      - name: Upload artifact for deployment
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-app
+          path: ${{ env.APP_PATH }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: python-app
+          path: .
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy to Azure Functions
+        uses: Azure/functions-action@v1
+        with:
+          app-name: ${{ github.event.inputs.functionName }}
+          package: .
+          scm-do-build-during-deployment: false
