# デプロイメントワークフローの改善 Azure Functionsへのデプロイメントプロセスを改善し、デプロイメントの概要を生成するステップを追加しました。
## 変更したファイル
- .github/workflows/Deploy-to-Azure_Functions.yml
  - デプロイメントの概要を生成するステップを追加しました。
  - Azure Functionsへのデプロイメント時にパッケージを指定するように変更しました。

## 削除したファイル
- なし

--- a/.github/workflows/Deploy-to-Azure_Functions.yml
+++ b/.github/workflows/Deploy-to-Azure_Functions.yml
@@ -74,8 +74,34 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Deploy to Azure Functions
+        id: deploy
         uses: Azure/functions-action@v1
         with:
           app-name: ${{ github.event.inputs.functionName }}
           package: .
           slot-name: 'Production'
+
+      - name: Generate deployment summary
+        if: always()
+        run: |
+          echo "## 🚀 Deployment Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Workflow:** ${{ github.workflow }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Run Number:** ${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Triggered by:** ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Repository:** ${{ github.repository }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ steps.deploy.outcome }}" == "success" ]; then
+            echo "### ✅ Deployment Status: SUCCESS" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "**Function App Name:** ${{ github.event.inputs.functionName }}" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "### ❌ Deployment Status: FAILED" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Please check the logs for more details." >> $GITHUB_STEP_SUMMARY
+          fi
+      
+      - name: Azure Logout
+        if: always()
+        run: az logout
