--- a/.github/workflows/Deploy-to-Azure_Functions.yml
+++ b/.github/workflows/Deploy-to-Azure_Functions.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           cd ${{ env.APP_PATH }}
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt -t .
       
       - name: Zip artifact for deployment
         run: |
