--- a/.github/workflows/Deploy-to-Azure_Functions.yml
+++ b/.github/workflows/Deploy-to-Azure_Functions.yml
@@ -1,5 +1,7 @@
+# Azure Functions へ関数をデプロイするワークフロー
 name: Deploy API to Azure Functions
 
+# 手動トリガー (workflow_dispatch) でデプロイを実行
 on:
   workflow_dispatch:
     inputs:
@@ -8,64 +10,76 @@ on:
         required: true
         default: 'my-function-app'
 
+# OIDC 認証に必要な権限設定
 permissions:
-  id-token: write
-  contents: read
+  id-token: write    # Azure へのフェデレーション認証に必要
+  contents: read     # リポジトリの読み取りアクセス
 
 jobs:
+  # ビルドジョブ: 依存関係をインストールしてアーティファクトを作成
   build:
     runs-on: ubuntu-latest
     env:
-      APP_PATH: './src/http_functions'
+      APP_PATH: './src/http_functions'  # デプロイするアプリケーションのパス
 
     steps:
+      # ソースコードをチェックアウト
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Python 環境のセットアップ
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
       
+      # 仮想環境の作成と有効化
       - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
 
+      # 依存関係のインストール -t . オプションで現在のディレクトリに依存関係をインストール (Azure Functions 用）
       - name: Install dependencies
         run: |
           cd ${{ env.APP_PATH }}
           python -m pip install --upgrade pip
           pip install -r requirements.txt -t .
       
+      # デプロイ用にアプリケーションファイルを ZIP 圧縮
       - name: Zip artifact for deployment
         run: |
           cd ${{ env.APP_PATH }}
           zip -r release.zip ./*
 
+      # ZIP ファイルをアーティファクトとしてアップロード（次のジョブで使用）
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: python-app
           path: |
             ${{ env.APP_PATH }}/release.zip
-            !venv/
+            !venv/  # 仮想環境は除外
 
+  # デプロイジョブ: ビルドされたアーティファクトを Azure にデプロイ
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build  # ビルドジョブの完了後に実行
 
     steps:
+      # ビルドジョブで作成したアーティファクトをダウンロード
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
 
+      # ZIP ファイルを解凍して展開
       - name: Unzip artifact for deployment
         run: |
           unzip release.zip
           rm release.zip
 
+      # OIDC を使用した Azure へのログイン（シークレットから認証情報を取得）
       - name: Azure Login
         uses: azure/login@v2
         with:
@@ -73,14 +87,16 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      # Azure Functions へアプリケーションをデプロイ
       - name: Deploy to Azure Functions
         id: deploy
         uses: Azure/functions-action@v1
         with:
-          app-name: ${{ github.event.inputs.functionName }}
-          package: .
-          slot-name: 'Production'
+          app-name: ${{ github.event.inputs.functionName }}  # 手動入力された Function App 名
+          package: .  # カレントディレクトリのファイルをデプロイ
+          slot-name: 'Production'  # Production スロットにデプロイ
 
+      # デプロイ結果のサマリーを生成（成功・失敗にかかわらず実行）
       - name: Generate deployment summary
         if: always()
         run: |
@@ -92,6 +108,7 @@ jobs:
           echo "**Repository:** ${{ github.repository }}" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
+          # デプロイの成功・失敗に応じたメッセージを表示
           if [ "${{ steps.deploy.outcome }}" == "success" ]; then
             echo "### ✅ Deployment Status: SUCCESS" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
@@ -102,6 +119,7 @@ jobs:
             echo "Please check the logs for more details." >> $GITHUB_STEP_SUMMARY
           fi
       
+      # Azure からログアウト（セキュリティのため、成功・失敗にかかわらず実行）
       - name: Azure Logout
         if: always()
         run: az logout
